--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -66,11 +66,21 @@ overflow: hidden; -ms-text-overflow:ellipsis; -o-text-overflow:ellipsis; text-ov
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+ font-family: sans-serif;
   font-size: 1rem;
   line-height: 1rem;
   color: #303030;
-  background-color: #f5f5f5
+  background-color: #f5f5f5;
+  margin:0;
+  padding:0;
 }
-
+html {
+    width:100%;
+    margin:0;
+    padding:0;
+}
+    *, html * {
+        margin:0;
+        padding:0;
+    }
 
