--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,7 +1,35 @@
 ﻿@charset "utf-8";
 #xb_webcontainer {
     width:100%;
-    max-width:720px;
+    max-width:10rem;
     overflow:hidden
 }
 
+/*通用的容器块*/
+.xb_rectplan {
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+    padding:0.33333333rem;
+    padding-top:0.4444444444rem;
+    margin-top:0.3981481481rem;
+    border-top:1px solid #d8d8d8;
+    border-bottom:1px solid #d8d8d8;
+    background-color:#fff
+
+}
+
+    .xb_rectplan > h3.title {
+        font-size:0.44444444rem;
+        line-height:0.4444444rem;
+  
+        width:100%;
+        color:#303030
+    }
+        .xb_rectplan > h3.title > label {
+          
+            line-height:0.44444444rem;
+            font-size:0.36111111rem!important;
+            color:#999
+         
+        }
