--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -36,13 +36,10 @@ overflow: hidden; -ms-text-overflow:ellipsis; -o-text-overflow:ellipsis; text-ov
 .affix {
   position: fixed;
 }
-.clearfix:after{
-    clear:both;
-}
-.clearfix:before{
-    display:table;
-    content:" "
-}
+
+.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
 .fade {
   opacity: 0;
   -webkit-transition: opacity .15s linear;
@@ -82,5 +79,101 @@ html {
     *, html * {
         margin:0;
         padding:0;
+        outline:none;
     }
+ul {
+    list-style:none;
+}
+
+
+/*字体图标部分*/
+@font-face {
+    font-family: 'icomoon';
+    src:    url('../fonts/icomoon.eot?i96cql');
+    src:    url('../fonts/icomoon.eot?i96cql#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?i96cql') format('truetype'),
+        url('../fonts/icomoon.woff?i96cql') format('woff'),
+        url('../fonts/icomoon.svg?i96cql#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-uniE906:before {
+    content: "\e906";
+}
+.icon-uniE914:before {
+    content: "\e914";
+}
+.icon-uniE907:before {
+    content: "\e907";
+}
+.icon-uniE908:before {
+    content: "\e908";
+}
+.icon-uniE909:before {
+    content: "\e909";
+}
+.icon-uniE90A:before {
+    content: "\e90a";
+}
+.icon-uniE90B:before {
+    content: "\e90b";
+}
+.icon-uniE90C:before {
+    content: "\e90c";
+}
+.icon-uniE90D:before {
+    content: "\e90d";
+}
+.icon-uniE90E:before {
+    content: "\e90e";
+}
+.icon-uniE90F:before {
+    content: "\e90f";
+}
+.icon-uniE910:before {
+    content: "\e910";
+}
+.icon-uniE911:before {
+    content: "\e911";
+}
+.icon-uniE912:before {
+    content: "\e912";
+}
+.icon-uniE913:before {
+    content: "\e913";
+}
+.icon-uniE900:before {
+    content: "\e900";
+}
+.icon-uniE901:before {
+    content: "\e901";
+}
+.icon-uniE902:before {
+    content: "\e902";
+}
+.icon-uniE903:before {
+    content: "\e903";
+}
+.icon-uniE904:before {
+    content: "\e904";
+}
+.icon-uniE905:before {
+    content: "\e905";
+}
 
