--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -191,3 +191,10 @@ text-align:center
              background-color:#3bc0cb;
              margin-bottom:-1px;
          }
+
+         /*固定高度页面样式类*/
+         .constant_height {
+             height:100%;
+             max-height:17.777777777777778rem;
+             background-color:#f5f5f5;
+         }
